Just a bunch of general refactorings.